--- a/Calculator/app/src/main/res/values/strings.xml
+++ b/Calculator/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="_7">7</string>
     <string name="_8">8</string>
     <string name="_9">9</string>
-    <string name="div">÷</string>
+    <string name="div">/</string>
     <string name="sqrt">sqrt</string>
     <string name="_4">4</string>
     <string name="_5">5</string>
